--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,12 @@
 
 @custom-variant dark (&:is(.dark *));
 
+body {
+  width: 100dvw;
+  height: 100dvh;
+  background-color: oklch(98.7% 0.022 95.277);
+}
+
 :root {
   --radius: 0.625rem;
   --background: oklch(1 0 0);
