--- a/src/index.css
+++ b/src/index.css
@@ -21,14 +21,14 @@ body {
   --card-foreground: oklch(0.145 0 0);
   --popover: oklch(98.7% 0.022 95.277);
   --popover-foreground: oklch(0.145 0 0);
-  --primary: oklch(27.9% 0.041 260.031);
+  --primary: oklch(27.8% 0.033 256.848);
   --primary-foreground: oklch(0.985 0 0);
   --secondary: oklch(98.7% 0.022 95.277);
-  --secondary-foreground: oklch(27.9% 0.041 260.031);
+  --secondary-foreground: oklch(27.8% 0.033 256.848);
   --muted: oklch(98.7% 0.022 95.277);
   --muted-foreground: oklch(0.556 0 0);
   --accent: oklch(96.2% 0.059 95.617);
-  --accent-foreground: oklch(27.9% 0.041 260.031);
+  --accent-foreground: oklch(27.8% 0.033 256.848);
   --destructive: oklch(0.577 0.245 27.325);
   --border: oklch(0.922 0 0);
   --input: oklch(0.922 0 0);
@@ -40,10 +40,10 @@ body {
   --chart-5: oklch(0.769 0.188 70.08);
   --sidebar: oklch(96.2% 0.059 95.617);
   --sidebar-foreground: oklch(0.145 0 0);
-  --sidebar-primary: oklch(27.9% 0.041 260.031);
+  --sidebar-primary: oklch(27.8% 0.033 256.848);
   --sidebar-primary-foreground: oklch(0.985 0 0);
   --sidebar-accent: oklch(98.7% 0.022 95.277);
-  --sidebar-accent-foreground: oklch(27.9% 0.041 260.031);
+  --sidebar-accent-foreground: oklch(27.8% 0.033 256.848);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
 }
@@ -51,12 +51,12 @@ body {
 .dark {
   --background: oklch(0.145 0 0);
   --foreground: oklch(0.985 0 0);
-  --card: oklch(27.9% 0.041 260.031);
+  --card: oklch(27.8% 0.033 256.848);
   --card-foreground: oklch(0.985 0 0);
-  --popover: oklch(27.9% 0.041 260.031);
+  --popover: oklch(27.8% 0.033 256.848);
   --popover-foreground: oklch(0.985 0 0);
   --primary: oklch(0.922 0 0);
-  --primary-foreground: oklch(27.9% 0.041 260.031);
+  --primary-foreground: oklch(27.8% 0.033 256.848);
   --secondary: oklch(0.269 0 0);
   --secondary-foreground: oklch(0.985 0 0);
   --muted: oklch(0.269 0 0);
@@ -72,7 +72,7 @@ body {
   --chart-3: oklch(0.769 0.188 70.08);
   --chart-4: oklch(0.627 0.265 303.9);
   --chart-5: oklch(0.645 0.246 16.439);
-  --sidebar: oklch(27.9% 0.041 260.031);
+  --sidebar: oklch(27.8% 0.033 256.848);
   --sidebar-foreground: oklch(0.985 0 0);
   --sidebar-primary: oklch(0.488 0.243 264.376);
   --sidebar-primary-foreground: oklch(0.985 0 0);
@@ -130,6 +130,12 @@ body {
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+}
+
+@layer components {
+  .bg-radial-amber {
+    background: radial-gradient(ellipse at center, rgb(254 243 199), rgb(253 230 138));
+  }
 }
 
 @layer base {
