--- a/src/index.css
+++ b/src/index.css
@@ -14,23 +14,24 @@ body {
 
 :root {
   --radius: 0.625rem;
-  --background: oklch(0.97 0.03 95);
+  /* --background: oklch(0.9171 0.0127 91.53); */
+  --background: oklch(1 0.015 89.6);
   --foreground: oklch(0.2 0 0);
-  --card: oklch(1 0 0);
+  --card: oklch(1 0 100);
   --card-foreground: oklch(0.2 0 0);
   --popover: oklch(0.98 0.02 95);
   --popover-foreground: oklch(0.2 0 0);
-  --primary: oklch(0.55 0.15 260);
+  --primary: oklch(0.7858 0.1598 85.31);
   --primary-foreground: oklch(0.98 0 0);
-  --secondary: oklch(0.96 0.02 95);
-  --secondary-foreground: oklch(0.55 0.15 260);
-  --muted: oklch(0.96 0.02 95);
+  --secondary: oklch(0.97 0.0063 91.47);
+  --secondary-foreground: oklch(0.65 0.25 89.6);
+  --muted: oklch(0.97 0.0063 91.47);
   --muted-foreground: oklch(0.5 0 0);
   --accent: oklch(0.95 0.05 95);
-  --accent-foreground: oklch(0.55 0.15 260);
+  --accent-foreground: oklch(0.65 0.25 89.6);
   --destructive: oklch(0.65 0.25 25);
   --destructive-foreground: oklch(0.98 0 0);
-  --border: oklch(0.9 0 0);
+  --border: oklch(0.9171 0.0127 91.53);
   --input: oklch(0.9 0 0);
   --ring: oklch(0.7 0 0);
   --chart-1: oklch(0.65 0.22 260);
@@ -38,13 +39,13 @@ body {
   --chart-3: oklch(0.55 0.12 220);
   --chart-4: oklch(0.7 0.18 85);
   --chart-5: oklch(0.75 0.18 70);
-  --sidebar: oklch(0.96 0.08 95);
+  --sidebar: oklch(1 0 100);
   --sidebar-foreground: oklch(0.25 0.1 40);
-  --sidebar-primary: oklch(0.55 0.15 260);
+  --sidebar-primary: oklch(0.65 0.25 89.6);
   --sidebar-primary-foreground: oklch(0.98 0 0);
   --sidebar-accent: oklch(0.92 0.12 95);
   --sidebar-accent-foreground: oklch(0.35 0.12 42);
-  --sidebar-border: oklch(0.85 0.15 93);
+  --sidebar-border: oklch(0.9171 0.0127 91.53);
   --sidebar-ring: oklch(0.65 0.1 95);
 }
 
@@ -84,18 +85,18 @@ body {
 }
 
 @theme inline {
-  --text-sm: 1rem;
-  --text-md: 1.125rem;
-  --text-lg: 1.25rem;
-  --text-xl: 1.5rem;
-  --text-2xl: 1.875rem;
-  --text-3xl: 2.25rem;
-  --text-4xl: 3rem;
-  --text-5xl: 3.75rem;
-  --text-6xl: 4.5rem;
-  --text-7xl: 5.25rem;
-  --text-8xl: 6rem;
-  --text-9xl: 7.5rem;
+  --text-sm: 0.875rem;
+  --text-md: 1rem;
+  --text-lg: 1.125rem;
+  --text-xl: 1.25rem;
+  --text-2xl: 1.5rem;
+  --text-3xl: 1.875rem;
+  --text-4xl: 2.25rem;
+  --text-5xl: 3rem;
+  --text-6xl: 3.75rem;
+  --text-7xl: 4.5rem;
+  --text-8xl: 5.25rem;
+  --text-9xl: 6rem;
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
